docs: update api documents
